    * the output directory name is now YYYY-MM-DD-HH-MM, i.e. the separator between
      HH and MM changed 
    * unified default KDUMP_SAVEDIR across config, code and man to /var/crash
    * ping is now used to detect network is up; disable with KDUMP_NET_TIMEOUT=0    
    * all the yes/no options changed to true/false; yes/no/1/0 still accepted

1.0.3
-----
  
  * Honor the KDUMP_VERBOSE setting in kdump-save
  * fix distro prefix for ALP
  * add calibrate values for ALP (copied from TW)
  * add calibrate values for Leap 15.5
  * revert back to using rd.neednet=1 to enable network (bsc#1206015)
  * kdumptool calibrate: add even more margin to reservation 
    calculations (bsc#1207061)
  * don't skip infiniband interfaces (bsc#1186745)
    (not a complete fix, requires a patch in dracut as well)
  * Run kdump.service only after kdump-early.service is done 
    (boo#1196335)
  * fixed calibrate build on s390
  * minor fixes
  * improve the generation of calibrate.conf
    * print the qemu messages and trackrss log during calibrate
    * use static IP address for calibration
    * all calibrate.conf variants now stored in a single file
    * added a README and a helper script for updating calibrate.conf
    * prevent dracut from running emergency shell
    * fix s390x build dependencies
  * fix deleting of a temporary file in dracut/module-setup.sh
  * look for nsswitch.conf in /etc and /usr/etc
  * never run a debugging shell when KDUMP_CONTINUE_ON_ERROR is set
  * remove build dependency for wicked 
  * fix package summary in the spec file
  * maintain the spec file in git
  * Make the kdump-save.service reboot after kdump-save is finished
    (bsc#1204000)
  * fix renaming of qeth interfaces (bsc#1204743, bsc#1144337)
  * ppc64: rebuild initrd image after migration (bsc#1191410)
  * kdumptool calibrate: modify fadump suggestions (jsc#IBM-1027)
  * update to kdump-1.0.2+git20:
    * Use inst_binary to install kdump-save